--- a/trunk/loc/newtr/framework.po
+++ b/trunk/loc/newtr/framework.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wxGIS\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-11-18 23:12+0400\n"
-"PO-Revision-Date: 2011-11-18 23:37+0400\n"
+"POT-Creation-Date: 2011-11-20 04:24+0400\n"
+"PO-Revision-Date: 2011-11-20 04:24+0400\n"
 "Last-Translator: Bishop (aka Barishnikov Dmitriy) <polimax@mail.ru>\n"
 "Language-Team: gis-lab <sim@gis-lab.info>\n"
 "MIME-Version: 1.0\n"
@@ -21,327 +21,327 @@ msgstr ""
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:67
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:683
 msgid "Command Name"
-msgstr "Command Name"
+msgstr "Имя команды"
 
 #: D:\work\Projects\wxGIS\src\framework/addcommanddlg.cpp:70
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:68
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:684
 msgid "Description"
-msgstr "Description"
+msgstr "Описание"
 
 #: D:\work\Projects\wxGIS\src\framework/addcommanddlg.cpp:71
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:69
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:685
 msgid "KeyCode"
-msgstr "KeyCode"
+msgstr "Клавиша"
 
 #: D:\work\Projects\wxGIS\src\framework/addcommanddlg.cpp:78
 #: D:\work\Projects\wxGIS\src\framework/createcbdlg.cpp:90
 #: D:\work\Projects\wxGIS\src\framework/keycodedlg.cpp:127
 msgid "OK"
-msgstr "OK"
+msgstr "ОК"
 
 #: D:\work\Projects\wxGIS\src\framework/addcommanddlg.cpp:80
 #: D:\work\Projects\wxGIS\src\framework/createcbdlg.cpp:92
 msgid "Cancel"
-msgstr "Cancel"
+msgstr "Отмена"
 
 #: D:\work\Projects\wxGIS\src\framework/application.cpp:707
 msgid "Ready"
-msgstr "Ready"
+msgstr "Готов"
 
 #: D:\work\Projects\wxGIS\src\framework/application.cpp:790
 msgid "Get config failed!"
-msgstr ""
+msgstr "Не удалось получить конфигурацию!"
 
 #: D:\work\Projects\wxGIS\src\framework/application.cpp:790
 #: D:\work\Projects\wxGIS\src\framework/application.cpp:797
 msgid "Error"
-msgstr "Error"
+msgstr "Ошибка"
 
 #: D:\work\Projects\wxGIS\src\framework/application.cpp:797
 msgid "No Property Pages"
-msgstr "No Property Pages"
+msgstr "Отсутсвуют страницы свойств"
 
 #: D:\work\Projects\wxGIS\src\framework/application.cpp:803
 msgid "Options"
-msgstr "Options"
+msgstr "Параметры"
 
 #: D:\work\Projects\wxGIS\src\framework/application.cpp:852
 msgid "wxGISApplication: Failed to get log folder"
-msgstr "wxGISApplication: Failed to get log folder"
+msgstr "wxGISApplication: Ошибка получения папки с логами"
 
 #: D:\work\Projects\wxGIS\src\framework/application.cpp:867
 #, c-format
 msgid "wxGISApplication: Failed to open log file %s"
-msgstr "wxGISApplication: Failed to open log file %s"
+msgstr "wxGISApplication: Ошибка открытия файла логов %s"
 
 #: D:\work\Projects\wxGIS\src\framework/application.cpp:879
 #, c-format
 msgid "HOST '%s': OS desc - %s, free memory - %u Mb"
-msgstr "HOST '%s': OS desc - %s, free memory - %u Mb"
+msgstr "Имя ПК '%s': Описание ОС - %s, свободно памяти - %u Mb"
 
 #: D:\work\Projects\wxGIS\src\framework/application.cpp:880
 #, c-format
 msgid "wxGISApplication: %s %s is initializing..."
-msgstr "wxGISApplication: %s %s is initializing..."
+msgstr "wxGISApplication: %s %s иннициализируется..."
 
 #: D:\work\Projects\wxGIS\src\framework/application.cpp:881
 #, c-format
 msgid "wxGISApplication: Log file: %s"
-msgstr "wxGISApplication: Log file: %s"
+msgstr "wxGISApplication: Лог-файл: %s"
 
 #: D:\work\Projects\wxGIS\src\framework/application.cpp:891
 #, c-format
 msgid "wxGISCatalogApp: System folder is absent! Lookup path '%s'"
-msgstr "wxGISCatalogApp: System folder is absent! Lookup path '%s'"
+msgstr "wxGISCatalogApp: Отсутствует системная папка! Путь поиска '%s'"
 
 #: D:\work\Projects\wxGIS\src\framework/application.cpp:899
 msgid "wxGISApplication: Initialize locale"
-msgstr "wxGISApplication: Initialize locale"
+msgstr "wxGISApplication: Инициализация локали"
 
 #: D:\work\Projects\wxGIS\src\framework/application.cpp:914
 #, c-format
 msgid "wxGISApplication: Language is set to %s"
-msgstr "wxGISApplication: Language is set to %s"
+msgstr "wxGISApplication: Выбран язык %s"
 
 #: D:\work\Projects\wxGIS\src\framework/applicationex.cpp:183
 msgid "wxGISApplicationEx: Start. Creating main application frame..."
-msgstr "wxGISApplicationEx: Start. Creating main application frame..."
+msgstr "wxGISApplicationEx: Начало. Создание главного окна приложения..."
 
 #: D:\work\Projects\wxGIS\src\framework/applicationex.cpp:203
 msgid "wxGISApplicationEx: Creation complete"
-msgstr "wxGISApplicationEx: Creation complete"
+msgstr "wxGISApplicationEx: Создание завершено"
 
 #: D:\work\Projects\wxGIS\src\framework/command.cpp:68
 msgid "E&xit"
-msgstr "E&xit"
+msgstr "В&ыход"
 
 #: D:\work\Projects\wxGIS\src\framework/command.cpp:70
 msgid "&About..."
-msgstr "&About..."
+msgstr "&О программе..."
 
 #: D:\work\Projects\wxGIS\src\framework/command.cpp:72
 msgid "Customize..."
-msgstr "Customize..."
+msgstr "Настроить..."
 
 #: D:\work\Projects\wxGIS\src\framework/command.cpp:74
 #: D:\work\Projects\wxGIS\src\framework/command.cpp:173
 msgid "Separator"
-msgstr "Separator"
+msgstr "Разделитель"
 
 #: D:\work\Projects\wxGIS\src\framework/command.cpp:76
 msgid "StatusBar"
-msgstr "StatusBar"
+msgstr "Статусная строка"
 
 #: D:\work\Projects\wxGIS\src\framework/command.cpp:78
 msgid "Options..."
-msgstr "Options..."
+msgstr "Параметры..."
 
 #: D:\work\Projects\wxGIS\src\framework/command.cpp:89
 msgid "File"
-msgstr "File"
+msgstr "Файл"
 
 #: D:\work\Projects\wxGIS\src\framework/command.cpp:91
 msgid "Help"
-msgstr "Help"
+msgstr "Помощь"
 
 #: D:\work\Projects\wxGIS\src\framework/command.cpp:94
 msgid "View"
-msgstr "View"
+msgstr "Вид"
 
 #: D:\work\Projects\wxGIS\src\framework/command.cpp:96
 msgid "Tools"
-msgstr "Tools"
+msgstr "Инструменты"
 
 #: D:\work\Projects\wxGIS\src\framework/command.cpp:99
 msgid "[No category]"
-msgstr "[No category]"
+msgstr "[Без категории]"
 
 #: D:\work\Projects\wxGIS\src\framework/command.cpp:167
 msgid "Exit application"
-msgstr "Exit application"
+msgstr "Выход"
 
 #: D:\work\Projects\wxGIS\src\framework/command.cpp:169
 msgid "About application"
-msgstr "About application"
+msgstr "О программе"
 
 #: D:\work\Projects\wxGIS\src\framework/command.cpp:171
 msgid "Customize application"
-msgstr "Customize application"
+msgstr "Настроить программу"
 
 #: D:\work\Projects\wxGIS\src\framework/command.cpp:175
 #: D:\work\Projects\wxGIS\src\framework/command.cpp:229
 msgid "Show/Hide Statusbar"
-msgstr "Show/Hide Statusbar"
+msgstr "Показать/скрыть статусную строку"
 
 #: D:\work\Projects\wxGIS\src\framework/command.cpp:177
 #: D:\work\Projects\wxGIS\src\framework/command.cpp:231
 msgid "Application options"
-msgstr "Application options"
+msgstr "Свойства приложения"
 
 #: D:\work\Projects\wxGIS\src\framework/command.cpp:223
 msgid "Exit"
-msgstr "Exit"
+msgstr "Выход"
 
 #: D:\work\Projects\wxGIS\src\framework/command.cpp:225
 msgid "About"
-msgstr "About"
+msgstr "О программе"
 
 #: D:\work\Projects\wxGIS\src\framework/command.cpp:227
 msgid "Customize"
-msgstr "Customize"
+msgstr "Настроить"
 
 #: D:\work\Projects\wxGIS\src\framework/createcbdlg.cpp:35
 msgid "New CommandBar"
-msgstr "New CommandBar"
+msgstr "Новая панель инструментов"
 
 #: D:\work\Projects\wxGIS\src\framework/createcbdlg.cpp:47
 msgid "Name"
-msgstr "Name"
+msgstr "Имя"
 
 #: D:\work\Projects\wxGIS\src\framework/createcbdlg.cpp:54
 msgid "Caption"
-msgstr "Caption"
+msgstr "Подпись"
 
 #: D:\work\Projects\wxGIS\src\framework/createcbdlg.cpp:61
 msgid "Type"
-msgstr "Type"
+msgstr "Тип"
 
 #: D:\work\Projects\wxGIS\src\framework/createcbdlg.cpp:65
 msgid "Menu"
-msgstr "Menu"
+msgstr "Меню"
 
 #: D:\work\Projects\wxGIS\src\framework/createcbdlg.cpp:65
 msgid "Context menu"
-msgstr "Context menu"
+msgstr "Контекстное меню"
 
 #: D:\work\Projects\wxGIS\src\framework/createcbdlg.cpp:65
 msgid "ToolBar"
-msgstr "ToolBar"
+msgstr "Панель инструментов"
 
 #: D:\work\Projects\wxGIS\src\framework/createcbdlg.cpp:71
 msgid "Left dockable"
-msgstr "Left dockable"
+msgstr "Прилепить слева"
 
 #: D:\work\Projects\wxGIS\src\framework/createcbdlg.cpp:79
 msgid "Right dockable"
-msgstr "Right dockable"
+msgstr "Прилепить справа"
 
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:76
 msgid "Create toolbar/menu"
-msgstr "Create toolbar/menu"
+msgstr "Создать панель или меню"
 
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:79
 msgid "Delete toolbar/menu"
-msgstr "Delete toolbar/menu"
+msgstr "Удалить панель или меню"
 
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:82
 msgid "Add button"
-msgstr ""
+msgstr "Добавить кнопку"
 
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:85
 msgid "Remove button"
-msgstr ""
+msgstr "Удалить кнопку"
 
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:88
 msgid "Move up"
-msgstr ""
+msgstr "Переместить вверх"
 
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:90
 msgid "Move down"
-msgstr ""
+msgstr "Переместить вниз"
 
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:102
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:693
 msgid "Set keycode"
-msgstr "Set keycode"
+msgstr "Ввести клавишу"
 
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:114
 msgid "Menubar"
-msgstr "Menubar"
+msgstr "Паенель меню"
 
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:116
 msgid "Context Menus"
-msgstr "Context Menus"
+msgstr "Контекстные меню"
 
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:118
 msgid "New Menus"
-msgstr "New Menus"
+msgstr "Новые меню"
 
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:120
 msgid "ToolBars"
-msgstr "ToolBars"
+msgstr "Панели инструментов"
 
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:129
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:381
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:533
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:578
 msgid "menu"
-msgstr "menu"
+msgstr "меню"
 
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:147
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:401
 msgid "new menu"
-msgstr "new menu"
+msgstr "новое меню"
 
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:153
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:407
 msgid "context menu"
-msgstr "context menu"
+msgstr "контекстное меню"
 
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:161
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:438
 msgid "toolbar"
-msgstr "toolbar"
+msgstr "панель инструментов"
 
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:815
 msgid "ToolBars & Menues"
-msgstr ""
+msgstr "Панели инструментов и меню"
 
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:816
 msgid "Commands"
-msgstr "Commands"
+msgstr "Команды"
 
 #: D:\work\Projects\wxGIS\src\framework/customizedlg.cpp:821
 msgid "Close"
-msgstr "Close"
+msgstr "Закрыть"
 
 #: D:\work\Projects\wxGIS\src\framework/propertypages.cpp:60
 msgid "Locale files folder path"
-msgstr "Locale files folder path"
+msgstr "Путь до папки файлов локализации"
 
 #: D:\work\Projects\wxGIS\src\framework/propertypages.cpp:77
 msgid "Language"
-msgstr "Language"
+msgstr "Язык"
 
 #: D:\work\Projects\wxGIS\src\framework/propertypages.cpp:91
 msgid "wxGIS system files folder path"
-msgstr "wxGIS system files folder path"
+msgstr "Путь до папки системных файлов"
 
 #: D:\work\Projects\wxGIS\src\framework/propertypages.cpp:107
 msgid "wxGIS log files folder path"
-msgstr "wxGIS log files folder path"
+msgstr "Путь до папки логов"
 
 #: D:\work\Projects\wxGIS\src\framework/propertypages.cpp:123
 msgid "Log debug GDAL messages"
-msgstr "Log debug GDAL messages"
+msgstr "Логировать собщения GDAL"
 
 #: D:\work\Projects\wxGIS\src\framework/propertypages.cpp:138
 msgid "To apply some changes on this page the application restart needed"
-msgstr "To apply some changes on this page the application restart needed"
+msgstr "Для принятия некоторых настроек на этой странице необходим перезапуск приложения"
 
 #: D:\work\Projects\wxGIS\src\framework/propertypages.cpp:224
 msgid "Choose a folder with locale files"
-msgstr "Choose a folder with locale files"
+msgstr "Выберите путь до папки фалов локализации"
 
 #: D:\work\Projects\wxGIS\src\framework/propertypages.cpp:242
 msgid "Choose a wxGIS system files folder path"
-msgstr "Choose a wxGIS system files folder path"
+msgstr "Выберите путь до папки системных файлов"
 
 #: D:\work\Projects\wxGIS\src\framework/propertypages.cpp:256
 msgid "Choose a wxGIS log files folder path"
-msgstr "Choose a wxGIS log files folder path"
+msgstr "Выберите путь до папки с логами"
 
 #: D:\work\Projects\wxGIS\src\framework/statusbar.cpp:147
 #: D:\work\Projects\wxGIS\src\framework/statusbar.cpp:187
@@ -352,73 +352,73 @@ msgstr "%H:%M"
 #: D:\work\Projects\wxGIS\src\framework/toolbarmenu.cpp:102
 #: D:\work\Projects\wxGIS\src\framework/toolbarmenu.cpp:122
 msgid "Toolbars"
-msgstr "Toolbars"
+msgstr "Панели инструментов"
 
 #: D:\work\Projects\wxGIS\src\framework/toolbarmenu.cpp:87
 msgid "[Menus]"
-msgstr "[Menus]"
+msgstr "[Меню]"
 
 #: D:\work\Projects\wxGIS\include\wxgis\framework/addcommanddlg.h:70
 msgid "Add command"
-msgstr "Add command"
+msgstr "Добавить команду"
 
 #: D:\work\Projects\wxGIS\include\wxgis\framework/commandbar.h:27
 msgid "Standard"
-msgstr "Standard"
+msgstr "Стандартная"
 
 #: D:\work\Projects\wxGIS\include\wxgis\framework/commandbar.h:28
 msgid "Location"
-msgstr "Location"
+msgstr "Путь"
 
 #: D:\work\Projects\wxGIS\include\wxgis\framework/commandbar.h:29
 msgid "Geography"
-msgstr "Geography"
+msgstr "География"
 
 #: D:\work\Projects\wxGIS\include\wxgis\framework/commandbar.h:39
 #: D:\work\Projects\wxGIS\include\wxgis\framework/commandbar.h:72
 #: D:\work\Projects\wxGIS\include\wxgis\framework/commandbar.h:97
 msgid "No Caption"
-msgstr "No Caption"
+msgstr "Без подписи"
 
 #: D:\work\Projects\wxGIS\include\wxgis\framework/createcbdlg.h:69
 msgid "Create toolbar or menu"
-msgstr "Create toolbar or menu"
+msgstr "Создать панель или меню"
 
 #: D:\work\Projects\wxGIS\include\wxgis\framework/keycodedlg.h:72
 msgid "Enter key code"
-msgstr "Enter key code"
+msgstr "Ввести клавишу"
 
 #: D:\work\Projects\wxGIS\include\wxgis\framework/menubar.h:27
 msgid "&File"
-msgstr "&File"
+msgstr "&Файл"
 
 #: D:\work\Projects\wxGIS\include\wxgis\framework/menubar.h:28
 msgid "&Edit"
-msgstr "&Edit"
+msgstr "&Правка"
 
 #: D:\work\Projects\wxGIS\include\wxgis\framework/menubar.h:29
 msgid "&Go"
-msgstr "&Go"
+msgstr "П&ерейти"
 
 #: D:\work\Projects\wxGIS\include\wxgis\framework/menubar.h:30
 msgid "&View"
-msgstr "&View"
+msgstr "&Вид"
 
 #: D:\work\Projects\wxGIS\include\wxgis\framework/menubar.h:31
 msgid "&Help"
-msgstr "&Help"
+msgstr "По&мощь"
 
 #: D:\work\Projects\wxGIS\include\wxgis\framework/menubar.h:32
 msgid "&Windows"
-msgstr "&Windows"
+msgstr "&Окно"
 
 #: D:\work\Projects\wxGIS\include\wxgis\framework/menubar.h:33
 msgid "&Tools"
-msgstr "&Tools"
+msgstr "&Инструменты"
 
 #: D:\work\Projects\wxGIS\include\wxgis\framework/propertypages.h:56
 msgid "Miscellaneous"
-msgstr "Miscellaneous"
+msgstr "Прочее"
 
 #~ msgid "wxGISApplication: Library %s loaded"
 #~ msgstr "wxGISApplication: Библиотека %s загружена"
