--- a/trunk/loc/newtr/geoprocess.po
+++ b/trunk/loc/newtr/geoprocess.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wxGIS\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-11-18 23:12+0400\n"
-"PO-Revision-Date: 2011-11-18 23:36+0400\n"
+"POT-Creation-Date: 2011-11-20 04:24+0400\n"
+"PO-Revision-Date: 2011-11-20 04:24+0400\n"
 "Last-Translator: Bishop (aka Barishnikov Dmitriy) <polimax@mail.ru>\n"
 "Language-Team: Bishop <polimax@mail.ru>\n"
 "MIME-Version: 1.0\n"
@@ -19,23 +19,23 @@ msgstr ""
 #: D:\work\Projects\wxGIS\src\geoprocess/processmain.cpp:60
 #, c-format
 msgid "Failed to initialize the wxWidgets library, aborting."
-msgstr "Failed to initialize the wxWidgets library, aborting."
+msgstr "Ошибка инициализации библиотеки wxWidgets, остановка."
 
 #: D:\work\Projects\wxGIS\src\geoprocess/processmain.cpp:69
 msgid "Show this help message"
-msgstr "Show this help message"
+msgstr "Показать эту справку"
 
 #: D:\work\Projects\wxGIS\src\geoprocess/processmain.cpp:70
 msgid "The version of this program"
-msgstr "The version of this program"
+msgstr "Версия этой программы"
 
 #: D:\work\Projects\wxGIS\src\geoprocess/processmain.cpp:71
 msgid "The tool name"
-msgstr "The tool name"
+msgstr "Название инструмента"
 
 #: D:\work\Projects\wxGIS\src\geoprocess/processmain.cpp:72
 msgid "The tool parameters"
-msgstr "The tool parameters"
+msgstr "Параметры инструмента"
 
 #: D:\work\Projects\wxGIS\src\geoprocess/processmain.cpp:77
 #, c-format
@@ -44,8 +44,8 @@ msgid ""
 "Author: Bishop (aka Barishnikov Dmitriy), polimax@mail.ru\n"
 "Copyright (c) 2010-2011"
 msgstr ""
-"The wxGISGeoprocess (%s)\n"
-"Author: Bishop (aka Barishnikov Dmitriy), polimax@mail.ru\n"
+"Приложение wxGISGeoprocess (%s)\n"
+"Автор: Bishop (Барышников Дмитрий), polimax@mail.ru\n"
 "Copyright (c) 2010-2011"
 
 #: D:\work\Projects\wxGIS\src\geoprocess/processmain.cpp:109
@@ -55,26 +55,26 @@ msgid ""
 "Author: Bishop (aka Barishnikov Dmitriy), polimax@mail.ru\n"
 "Copyright (c) 2010-2011\n"
 msgstr ""
-"The wxGISGeoprocess (%s)\n"
-"Author: Bishop (aka Barishnikov Dmitriy), polimax@mail.ru\n"
+"Приложение wxGISGeoprocess (%s)\n"
+"Автор: Bishop (Барышников Дмитрий), polimax@mail.ru\n"
 "Copyright (c) 2010-2011\n"
 
 #: D:\work\Projects\wxGIS\src\geoprocess/processmain.cpp:176
 msgid "Get wxGISToolbox config failed!"
-msgstr "Get wxGISToolbox config failed!"
+msgstr "Получение файла настроек wxGISToolbox завершилось неудачно!"
 
 #: D:\work\Projects\wxGIS\src\geoprocess/processmain.cpp:183
 #, c-format
 msgid "Get Geoprocessing tool %s failed!"
-msgstr "Get Geoprocessing tool %s failed!"
+msgstr "Получение инструмента геообработки (%s) завершилась неудачно!"
 
 #: D:\work\Projects\wxGIS\src\geoprocess/processmain.cpp:189
 #, c-format
 msgid "Set Geoprocessing tool %s parameters failed!"
-msgstr "Set Geoprocessing tool %s parameters failed!"
+msgstr "Установка параметров инструмента геообработки (%s) завершилась неудачно!"
 
 #: D:\work\Projects\wxGIS\src\geoprocess/processmain.cpp:195
 #, c-format
 msgid "Geoprocessing tool %s validation failed!"
-msgstr "Geoprocessing tool %s validation failed!"
+msgstr "Валидация параметров инструмента геообработки (%s) завершилась неудачно!"
 
